--- a/copy/2/index.html
+++ b/copy/2/index.html
@@ -5,5 +5,6 @@
 	</head>
   	<body>
   		<iframe src="lib/hello.html" width="200" height="200" />
+  		<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente recusandae sit commodi architecto quis incidunt. Ea dolor, aliquam, asperiores facilis cupiditate consequatur harum rem, optio ipsam est tempore voluptatum laudantium tempora. Molestias recusandae beatae similique, dolorum quod iure! Quae voluptatibus temporibus officiis similique consectetur unde nostrum suscipit, minus quasi tenetur.</span>
   	</body>
 </html>
